--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet style="height: 90%;"></ion-router-outlet>
+  <app-footer style="position: absolute; bottom: 0; width: 100%;"></app-footer>
 </ion-app>
